Fix grid blowout (text overflowing off the grid)

--- a/Angular Frontend/src/app/landing/landing.component.css
+++ b/Angular Frontend/src/app/landing/landing.component.css
@@ -17,19 +17,19 @@ p{
 
 .grid-container1 {
     grid-gap: 20px;
-    margin: 100px;
-    margin-top: 50px;
+    margin: 5vw;
+    margin-top: 2vw;
   }
 
 .grid-container2 {
     grid-gap: 20px;
-    margin-top: 130px;
-    margin-bottom: 70px;
+    margin-top: 10vw;
+    margin-bottom: 5vw;
     background-color: lavender;
   }
   
 .grid-item {
-    padding: 20px;
+    padding: 0.25vw;
 }
 
 
@@ -39,6 +39,12 @@ p{
     line-height: 1.4;
     margin: 1.5rem;
     letter-spacing: 0.00938em;
+}
+
+@media only screen and (min-width: 650px) and (max-width: 900px) {
+    .headline-4{
+        font-size: 4vw;;
+    }
 }
 
 .headline-2{
